new feature added mini

--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@ p {
   margin-left: 200px;
 }
 
-img {
+#image {
   width: 15rem;
   height: 15rem;
   position: relative;
@@ -33,11 +33,11 @@ img {
   top: 100px;
 }
 
-img {
+#image {
   border: 10px solid blue;
 }
 
-img:active {
+#image:active {
   transform: scale(1.1, 1.1);
   transition: all linear 0.5s;
 }
@@ -51,4 +51,12 @@ p {
 h1 {
   position: relative;
   top: 3rem;
+}
+
+#nav1 {
+  width: 3rem;
+}
+
+#nav2 {
+  width: 3rem;
 }
